---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Updated the internal detection of recycling and barreling/stacking recipes to the current set of popular mods
  Bugfixes:
    - Fixed a bug that prevent irrelevant free item choices being filtered out correctly

---------------------------------------------------------------------------------------------------
Version: 1.1.23
Date: 11. 07. 2021
  Features:
    - Added a button to the utility dialog to export the missing machines and modules as a series of constant combinators that can be hooked up to a requester chest
  Changes:
    - The mod now filters out crafting categories in the preferences dialog that don't have any recipes using them (removes the 'basic-crafting' category from vanilla maps)
  Bugfixes:
    - Fixed several matrix-solver related crashes (hopefully) that were introduced in the last version

---------------------------------------------------------------------------------------------------
Version: 1.1.22
Date: 10. 07. 2021
  Changes:
    - The mod now makes sure that the main interface fits onto the player's screen when first creating or joining a game
    - The margin for showing items with very small amounts now scales with the subfactory timescale
    - Improved performance when adding a product with only one recipe a bit
  Bugfixes:
    - Fixed a crash and some other issues related to the background dimming when paused
    - Fixed an issue where the modal interface dimmer would not layer correctly when loading a save in some cases
    - Fixed a missing tooltip string on the dialog submit button

---------------------------------------------------------------------------------------------------
Version: 1.1.21
Date: 04. 07. 2021
  Features:
    - Implemented the ability to add recipes from top level ingredients
  Changes: